Replace raw foreign key value in bookmarks with primary descriptors

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= bookmark.box.city_id %></td>
         <td><%= bookmark.food_option.city_id %></td>
-        <td><%= bookmark.user_id %></td>
+        <td><%= bookmark.user.email %></td>
         <td>
           <a href="/bookmarks/<%= bookmark.id %>" class="btn btn-primary">Show</a>
           <a href="/bookmarks/<%= bookmark.id %>/edit" class="btn btn-warning">Edit</a>
