--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -17,7 +17,7 @@
 
       <% @bookmarks.each do |bookmark| %>
       <tr>
-        <td><%= bookmark.box_id %></td>
+        <td><%= bookmark.box.city_id %></td>
         <td><%= bookmark.food_option_id %></td>
         <td><%= bookmark.user_id %></td>
         <td>
