--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -17,7 +17,7 @@
 
       <% @comments.each do |comment| %>
       <tr>
-        <td><%= comment.user_id %></td>
+        <td><%= comment.user.email %></td>
         <td><%= comment.box_id %></td>
         <td><%= comment.food_option_id %></td>
         <td>
