--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -18,7 +18,7 @@
       <% @comments.each do |comment| %>
       <tr>
         <td><%= comment.user.email %></td>
-        <td><%= comment.box_id %></td>
+        <td><%= comment.box.city_id %></td>
         <td><%= comment.food_option_id %></td>
         <td>
           <a href="/comments/<%= comment.id %>" class="btn btn-primary">Show</a>
