Replace raw foreign key value in comments with primary descriptors

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= comment.user.email %></td>
         <td><%= comment.box.city_id %></td>
-        <td><%= comment.food_option_id %></td>
+        <td><%= comment.food_option.city_id %></td>
         <td>
           <a href="/comments/<%= comment.id %>" class="btn btn-primary">Show</a>
           <a href="/comments/<%= comment.id %>/edit" class="btn btn-warning">Edit</a>
