--- a/app/views/food_options/index.html.erb
+++ b/app/views/food_options/index.html.erb
@@ -16,7 +16,7 @@
 
       <% @food_options.each do |food_option| %>
       <tr>
-        <td><%= food_option.city_id %></td>
+        <td><%= food_option.city.created_at %></td>
         <td><%= food_option.details %></td>
         <td>
           <a href="/food_options/<%= food_option.id %>" class="btn btn-primary">Show</a>
