--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -33,7 +33,7 @@
           Box
         </label>
 
-        <input type="text" id="box_id" name="box_id" placeholder="Box" class="form-control" value="<%= @comment.box_id %>">
+        <%= select_tag(:box_id, options_from_collection_for_select(Box.all, :id, :city_id, @comment.box_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for food_option_id -->
