--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -20,3 +20,65 @@
     </div>
   </div>
 </div>
+
+<!-- A City has many boxes -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Boxes
+      </li>
+
+      <% @city.boxes.each do |box| %>
+        <li class="list-group-item">
+          <a href="/boxes/<%= box.id %>">
+            <%= box.city_id %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/boxes/<%= box.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/boxes/<%= box.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_box/<%= box.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<!-- A City has many food_options -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Food Options
+      </li>
+
+      <% @city.food_options.each do |food_option| %>
+        <li class="list-group-item">
+          <a href="/food_options/<%= food_option.id %>">
+            <%= food_option.city_id %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/food_options/<%= food_option.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/food_options/<%= food_option.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_food_option/<%= food_option.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
