--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -6,13 +6,31 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Box</dt>
-      <dd><%= @bookmark.box_id %></dd>
+      <dd>
+        <% if @bookmark.box.present? %>
+          <a href="/boxes/<%= @bookmark.box_id %>">
+            <%= @bookmark.box.city_id %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Food option</dt>
-      <dd><%= @bookmark.food_option_id %></dd>
+      <dd>
+        <% if @bookmark.food_option.present? %>
+          <a href="/food_options/<%= @bookmark.food_option_id %>">
+            <%= @bookmark.food_option.city_id %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>User</dt>
-      <dd><%= @bookmark.user_id %></dd>
+      <dd>
+        <% if @bookmark.user.present? %>
+          <a href="/users/<%= @bookmark.user_id %>">
+            <%= @bookmark.user.email %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
