--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -17,9 +17,27 @@
 
       <% @comments.each do |comment| %>
       <tr>
-        <td><%= comment.user.email %></td>
-        <td><%= comment.box.city_id %></td>
-        <td><%= comment.food_option.city_id %></td>
+        <td>
+          <% if comment.user.present? %>
+            <a href="/users/<%= comment.user.id %>">
+              <%= comment.user.email %>
+            </a>
+          <% end %>
+        </td>
+        <td>
+          <% if comment.box.present? %>
+            <a href="/boxes/<%= comment.box.id %>">
+              <%= comment.box.city_id %>
+            </a>
+          <% end %>
+        </td>
+        <td>
+          <% if comment.food_option.present? %>
+            <a href="/food_options/<%= comment.food_option.id %>">
+              <%= comment.food_option.city_id %>
+            </a>
+          <% end %>
+        </td>
         <td>
           <a href="/comments/<%= comment.id %>" class="btn btn-primary">Show</a>
           <a href="/comments/<%= comment.id %>/edit" class="btn btn-warning">Edit</a>
