--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -6,13 +6,31 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>User</dt>
-      <dd><%= @comment.user_id %></dd>
+      <dd>
+        <% if @comment.user.present? %>
+          <a href="/users/<%= @comment.user_id %>">
+            <%= @comment.user.email %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Box</dt>
-      <dd><%= @comment.box_id %></dd>
+      <dd>
+        <% if @comment.box.present? %>
+          <a href="/boxes/<%= @comment.box_id %>">
+            <%= @comment.box.city_id %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Food option</dt>
-      <dd><%= @comment.food_option_id %></dd>
+      <dd>
+        <% if @comment.food_option.present? %>
+          <a href="/food_options/<%= @comment.food_option_id %>">
+            <%= @comment.food_option.city_id %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
