--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -32,6 +32,12 @@
         <% end %>
       </dd>
 
+      <dt>Body</dt>
+      <dd><%= @comment.body %></dd>
+
+      <dt>Datetime</dt>
+      <dd><%= @comment.datetime %></dd>
+
     </dl>
 
     <div class="btn-group btn-group-justified">
