--- a/app/views/boxes/new.html.erb
+++ b/app/views/boxes/new.html.erb
@@ -24,7 +24,7 @@
           City
         </label>
 
-        <%= select_tag(:city_id, options_from_collection_for_select(City.all, :id, :created_at, @box.city_id), :class => "form-control") %>
+        <%= select_tag(:city_id, options_from_collection_for_select(City.all, :id, :name, @box.city_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for details -->
@@ -34,6 +34,24 @@
         </label>
 
         <textarea id="details" name="details" placeholder="Details" class="form-control" rows="3"><%= @box.details %></textarea>
+      </div>
+
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
+
+        <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @box.name %>">
+      </div>
+
+      <!-- Label and input for address -->
+      <div class="form-group">
+        <label for="address" class="control-label">
+          Address
+        </label>
+
+        <input type="text" id="address" name="address" placeholder="Address" class="form-control" value="<%= @box.address %>">
       </div>
 
       <button class="btn btn-success">
