--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -5,6 +5,16 @@
 <div class="row">
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
+      <dt>Name</dt>
+      <dd><%= @city.name %></dd>
+
+      <dt>Location</dt>
+      <dd>
+        <div>
+          <div id="location_map" style="height: 480px;"></div>
+        </div>
+      </dd>
+
     </dl>
 
     <div class="btn-group btn-group-justified">
@@ -66,6 +76,24 @@
         <textarea id="details" name="details" placeholder="Details" class="form-control" rows="3"></textarea>
       </div>
 
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
+
+        <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for address -->
+      <div class="form-group">
+        <label for="address" class="control-label">
+          Address
+        </label>
+
+        <input type="text" id="address" name="address" placeholder="Address" class="form-control" value="">
+      </div>
+
       <button class="btn btn-block btn-success">
         Create Box
       </button>
@@ -120,6 +148,24 @@
         <textarea id="details" name="details" placeholder="Details" class="form-control" rows="3"></textarea>
       </div>
 
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
+
+        <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for address -->
+      <div class="form-group">
+        <label for="address" class="control-label">
+          Address
+        </label>
+
+        <input type="text" id="address" name="address" placeholder="Address" class="form-control" value="">
+      </div>
+
       <button class="btn btn-block btn-success">
         Create Food Option
       </button>
@@ -128,3 +174,21 @@
     </ul>
   </div>
 </div>
+
+
+<script src="//maps.google.com/maps/api/js?v=3.24&key=AIzaSyCOTPWiuvyyo6sKoIBzKA4-1ol-vTOIOlM"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script>
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'location_map'}}, function(){
+    markers = handler.addMarkers([
+      {
+        "lat": <%= @city.location_latitude %>,
+        "lng": <%= @city.location_longitude %>,
+        "infowindow": "<h5><%= @city.created_at %></h5><small><%= @city.location_formatted_address %></small>"
+      }
+    ]);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+</script>
