--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -9,6 +9,51 @@
       <p class="lead">Narrow results:</p>
 
         <div class="form-group">
+          <%= f.label :datetime, "Datetime" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='datetimegteqPicker'>
+                  <%= f.text_field :datetime_gteq, :class => "form-control", :placeholder => "Datetime greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='datetimelteqPicker'>
+                  <%= f.text_field :datetime_lteq, :class => "form-control", :placeholder => "Datetime less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#datetimegteqPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#datetimelteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#datetimegteqPicker').on("dp.change", function (e) {
+                  $('#datetimelteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#datetimelteqPicker').on("dp.change", function (e) {
+                  $('#datetimegteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+<div class="form-group">
+    <%= f.label :body_cont, "Body contains" %>
+    <%= f.text_field :body_cont, :class => "form-control", :placeholder => "Body contains" %>
+  </div>
+
+<div class="form-group">
           <%= f.label :created_at, "Created at" %>
           <div class="row">
             <div class='col-md-6 mb-1'>
@@ -70,6 +115,8 @@
         <th>User</th>
         <th>Box</th>
         <th>Food option</th>
+        <th>Body</th>
+        <th>Datetime</th>
         <th>Actions</th>
       </tr>
 
@@ -96,6 +143,8 @@
             </a>
           <% end %>
         </td>
+        <td><%= comment.body %></td>
+        <td><%= comment.datetime %></td>
         <td>
           <a href="/comments/<%= comment.id %>" class="btn btn-primary">Show</a>
           <a href="/comments/<%= comment.id %>/edit" class="btn btn-warning">Edit</a>
