--- a/app/views/food_options/index.html.erb
+++ b/app/views/food_options/index.html.erb
@@ -11,6 +11,8 @@
       <tr>
         <th>City</th>
         <th>Details</th>
+        <th>Name</th>
+        <th>Address</th>
         <th>Actions</th>
       </tr>
 
@@ -19,11 +21,13 @@
         <td>
           <% if food_option.city.present? %>
             <a href="/cities/<%= food_option.city.id %>">
-              <%= food_option.city.created_at %>
+              <%= food_option.city.name %>
             </a>
           <% end %>
         </td>
         <td><%= food_option.details %></td>
+        <td><%= food_option.name %></td>
+        <td><%= food_option.address %></td>
         <td>
           <a href="/food_options/<%= food_option.id %>" class="btn btn-primary">Show</a>
           <a href="/food_options/<%= food_option.id %>/edit" class="btn btn-warning">Edit</a>
@@ -35,3 +39,14 @@
     <%= paginate @food_options, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
+
+<script src="//maps.google.com/maps/api/js?v=3.24&key=AIzaSyCOTPWiuvyyo6sKoIBzKA4-1ol-vTOIOlM"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script>
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'location_map'}}, function(){
+    markers = handler.addMarkers(<%= raw @location_hash.to_json %>);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+</script>
