--- a/app/views/food_options/show.html.erb
+++ b/app/views/food_options/show.html.erb
@@ -9,13 +9,23 @@
       <dd>
         <% if @food_option.city.present? %>
           <a href="/cities/<%= @food_option.city_id %>">
-            <%= @food_option.city.created_at %>
+            <%= @food_option.city.name %>
           </a>
         <% end %>
       </dd>
 
       <dt>Details</dt>
       <dd><%= @food_option.details %></dd>
+
+      <dt>Name</dt>
+      <dd><%= @food_option.name %></dd>
+
+      <dt>Address</dt>
+      <dd>
+        <div>
+          <div id="location_map" style="height: 480px;"></div>
+        </div>
+      </dd>
 
     </dl>
 
@@ -156,8 +166,86 @@
         <%= select_tag(:food_option_id, options_from_collection_for_select(FoodOption.all, :id, :city_id), :class => "form-control") %>
       </div>
 
+      <!-- Label and input for body -->
+      <div class="form-group">
+        <label for="body" class="control-label">
+          Body
+        </label>
+
+        <textarea id="body" name="body" placeholder="Body" class="form-control" rows="3"></textarea>
+      </div>
+
+      <!-- Label and input for datetime -->
+      <div class="form-group">
+        <label for="datetime" class="control-label">
+          Datetime
+        </label>
+
+        <input type="text" id="datetime" name="datetime" placeholder="Datetime" class="form-control" value="">
+      </div>
+
       <button class="btn btn-block btn-success">
         Create Comment
+      </button>
+    </form>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<!-- A Food option has many photos -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Photos
+      </li>
+
+      <% @food_option.photos.each do |photo| %>
+        <li class="list-group-item">
+          <a href="/photos/<%= photo.id %>">
+            <%= photo.box_id %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/photos/<%= photo.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_photo" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for box_id -->
+      <div class="form-group">
+        <label for="box_id" class="control-label">
+          Box
+        </label>
+
+        <%= select_tag(:box_id, options_from_collection_for_select(Box.all, :id, :city_id), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for food_option_id -->
+      <div class="form-group">
+        <label for="food_option_id" class="control-label">
+          Food option
+        </label>
+
+        <%= select_tag(:food_option_id, options_from_collection_for_select(FoodOption.all, :id, :city_id), :class => "form-control") %>
+      </div>
+
+      <button class="btn btn-block btn-success">
+        Create Photo
       </button>
     </form>
       </li>
@@ -195,3 +283,21 @@
     </ul>
   </div>
 </div>
+
+
+<script src="//maps.google.com/maps/api/js?v=3.24&key=AIzaSyCOTPWiuvyyo6sKoIBzKA4-1ol-vTOIOlM"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script>
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'location_map'}}, function(){
+    markers = handler.addMarkers([
+      {
+        "lat": <%= @food_option.address_latitude %>,
+        "lng": <%= @food_option.address_longitude %>,
+        "infowindow": "<h5><%= @food_option.created_at %></h5><small><%= @food_option.address_formatted_address %></small>"
+      }
+    ]);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+</script>
