--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,19 +1,14 @@
 <div class="page-header">
   <h1>
-    Cities
-    <a href="/cities/new" class="btn btn-lg btn-success">New City</a>
+    Photos
+    <a href="/photos/new" class="btn btn-lg btn-success">New Photo</a>
   </h1>
 </div><div class="row mb-1">
   <div class="col-md-12">
-    <%= search_form_for @q, :class => collapse_search_form, :id => "cities_filters" do |f| %>
+    <%= search_form_for @q, :class => collapse_search_form, :id => "photos_filters" do |f| %>
       <p class="lead">Narrow results:</p>
 
         <div class="form-group">
-    <%= f.label :name_cont, "Name contains" %>
-    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
-  </div>
-
-<div class="form-group">
           <%= f.label :created_at, "Created at" %>
           <div class="row">
             <div class='col-md-6 mb-1'>
@@ -57,20 +52,11 @@
 
       <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
 
-      <a href="/cities" class="btn btn-default btn-block mb-1">Clear filters</a>
+      <a href="/photos" class="btn btn-default btn-block mb-1">Clear filters</a>
     <% end %>
-    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#cities_filters">
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#photos_filters">
       Show Filters
     </a>
-  </div>
-</div>
-
-
-<div class="row m-b-2">
-  <div class="col-md-12">
-    <div>
-      <div id="location_map" style="height: 480px;"></div>
-    </div>
   </div>
 </div>
 
@@ -78,34 +64,35 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>Name</th>
-        <th>Location</th>
+        <th>Box</th>
+        <th>Food option</th>
         <th>Actions</th>
       </tr>
 
-      <% @cities.each do |city| %>
+      <% @photos.each do |photo| %>
       <tr>
-        <td><%= city.name %></td>
-        <td><%= city.location %></td>
         <td>
-          <a href="/cities/<%= city.id %>" class="btn btn-primary">Show</a>
-          <a href="/cities/<%= city.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_city/<%= city.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <% if photo.box.present? %>
+            <a href="/boxes/<%= photo.box.id %>">
+              <%= photo.box.city_id %>
+            </a>
+          <% end %>
+        </td>
+        <td>
+          <% if photo.food_option.present? %>
+            <a href="/food_options/<%= photo.food_option.id %>">
+              <%= photo.food_option.city_id %>
+            </a>
+          <% end %>
+        </td>
+        <td>
+          <a href="/photos/<%= photo.id %>" class="btn btn-primary">Show</a>
+          <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">Edit</a>
+          <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
         </td>
       </tr>
       <% end %>
     </table>
-    <%= paginate @cities, theme: 'twitter-bootstrap-4' %>
+    <%= paginate @photos, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
-
-<script src="//maps.google.com/maps/api/js?v=3.24&key=AIzaSyCOTPWiuvyyo6sKoIBzKA4-1ol-vTOIOlM"></script>
-<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
-<script>
-  handler = Gmaps.build('Google');
-  handler.buildMap({ provider: {}, internal: {id: 'location_map'}}, function(){
-    markers = handler.addMarkers(<%= raw @location_hash.to_json %>);
-    handler.bounds.extendWith(markers);
-    handler.fitMapToBounds();
-  });
-</script>
